syntax = "proto3";

package comments;

option go_package = "protobuf/generated";

service Comment {
    rpc AddComment (AddCommentRequest) returns (AddCommentReply) {}
}

message AddCommentRequest {
    string showId = 1;
    string userId = 2;
    string text = 3;
}

message AddCommentReply {
    string id = 1;
    string showId = 2;
    string userId = 3;
    string text = 4;
}
